# crawler.io

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: SYSTEM_DESIGN.md  api-spec.yaml  architecture-diagram.mmd  data-models.json  roadmap-diagram.mmd
infra/docker/: Dockerfile.api  Dockerfile.worker
scripts/: check_log.py  count_posts.py  fetch_real_instagram.py  seed.py  smoke_test.py  test_docs.py  test_feed.py  test_inline.py  verify_api.py
services/api/: dependencies.py  main.py  schemas.py
services/api/routes/: creator_posts.py  creators.py  posts.py  tracking.py  webhooks.py
services/api/static/: docs.html
services/collector/: base.py  proxy_manager.py
services/collector/instagram/: collector.py
services/collector/tiktok/: collector.py
services/collector/youtube/: collector.py
services/normalizer/: base.py  instagram.py  registry.py  tiktok.py  youtube.py
services/scheduler/: celery_app.py  tasks.py
shared/cache/: redis.py
shared/config/: logging.py  settings.py
shared/db/: database.py  models.py
tests/: conftest.py  test_api.py  test_normalizers.py  test_proxy_manager.py  test_utils.py
