[project]
name = "crawler-io"
version = "0.1.0"
description = "Unified Social Media Data API Platform"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Cache
    "redis[hiredis]>=5.0.0",

    # Task Queue
    "celery[redis]>=5.3.0",

    # HTTP / Scraping
    "aiohttp>=3.9.0",
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "nanoid>=2.0.0",
    "orjson>=3.9.0",
    "tenacity>=8.2.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
include = ["services*", "shared*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
